--- a/frontend/components/headphone.css
+++ b/frontend/components/headphone.css
@@ -16,21 +16,75 @@
 
 .metric-body {
   display: flex;
+  justify-content: center;
   padding: 0 40px;
 }
 
+.metric-body .label {
+  font-family: itc-avant-garde-gothic-pro,sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  line-height: 14px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.08em;
+  color: #BDBDBD;
+}
+
 .metric {
-  letter-spacing: 0.15em;
   text-transform: uppercase;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex: 1;
+  top: 81px;
+  margin: 15px;
 }
 
 .metric span {
-  color:  rgb(150, 150, 150);
+  color:  #BDBDBD;
+}
+
+.metric .value {
+  font-family: neue-haas-grotesk-display;
+  font-size: 64px;
+  line-height: 71px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.value-match {
+  font-family: neue-haas-grotesk-display;
+  font-size: 64px;
+  line-height: 77px;
+  font-weight: 700;
+  color: #F2C94C;
+}
+
+.label-icon {
+  display: flex;
+  flex-direction: row;
+}
+
+.dot {
+  height: 14px;
+  width: 14px;
+  background-color:#ECECEC;;;
+  border-radius: 50%;
+  margin-left: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon {
+  width: 6px;
+  height: 12px;
+  font-size: 9px;
 }
 
 .detail h5 {
