--- a/frontend/components/header.css
+++ b/frontend/components/header.css
@@ -1,15 +1,44 @@
+:global(body) {
+    margin: 0;
+    font-family: itc-avant-garde-gothic-pro, -apple-system, BlinkMacSystemFont, Avenir Next, Avenir,Helvetica, sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  header {
+    margin: 50px 0;
+  }
+  nav,
+  figure {
+    text-align: center;
+  }
+  ul {
+    display: flex;
+    justify-content: space-between;
+  }
+  nav > ul {
+    padding: 4px 16px;
+    max-width: 600px;
+    margin: 0 auto;
+  }
+  li {
+    display: flex;
+    padding: 6px 8px;
+  }
+  a {
+    text-decoration: none;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    color: #999;
+    font-weight: 300;
+  }
 
-@media only screen and (max-width: 600px) {
-    .jsx-3601981170 {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+  @media only screen and (max-width: 600px){
+    ul {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 160px;
     }
-}
-
-@media only screen and (max-width: 600px) {
-    .jsx-3601981170>ul.jsx-3601981170{
-        width: 140px;
-    }
-}
+  }
+  
