--- a/frontend/components/picker.css
+++ b/frontend/components/picker.css
@@ -40,6 +40,30 @@
   padding: 20px 30px;
 }
 
+.pick-category {
+  height: 40px;
+  width: 200;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid rgba(235, 235, 235, 0.904);
+}
+
+.pick-category button {
+  width: 50%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  background-color: unset;
+  text-transform: uppercase;
+}
+
+.pick-category button:hover {
+  background-color: black;
+  color: #CCCCCC;
+}
+
 .taste-picker .filter-section .label {
   letter-spacing: 0.1em;
   text-transform: uppercase;
@@ -50,7 +74,7 @@
   justify-content: space-between;
 } 
 
-.taste-picker .filter-section .label > span {
+.taste-picker .filter-section .label > span  {
   color: #999;
   font-weight: 500;
 }
