--- a/frontend/components/picker.css
+++ b/frontend/components/picker.css
@@ -40,6 +40,10 @@
   padding: 20px 30px;
 }
 
+.select-section {
+  border-bottom: 1px solid rgba(235, 235, 235, 0.904);
+}
+
 .pick-category {
   height: 40px;
   width: 200;
