--- a/frontend/components/picker.css
+++ b/frontend/components/picker.css
@@ -2,12 +2,6 @@ button {
   outline: none;
 }
 
-.slider-button {
-  position: absolute;
-  height: 10px;
-  width: 10px;
-}
-
 .rc-slider-handle {
   width: 20px;
   height: 20px;
@@ -33,6 +27,7 @@ button {
 }
 
 .pick-header {
+  position: relative;
   height: 40px;
   width: 277px;
   border-bottom: 1px solid rgba(235, 235, 235, 0.904);
@@ -48,6 +43,7 @@ button {
 .filter-section {
   border-bottom: 1px solid rgba(235, 235, 235, 0.904);
   padding: 20px 30px;
+  position: relative;
 }
 
 .select-section {
@@ -136,3 +132,26 @@ button {
   opacity: 1;
 }
 
+.container-slider-button {
+  display: flex;
+  justify-content: flex-end;
+  position: absolute;
+  top: 7px;
+  right: 7px;
+}
+
+.reset-button {
+  height: 12px;
+  width: 12px;
+  padding: 0;
+  border: 0;
+  border-radius: 10px;
+}
+
+.reset-button.active { 
+  background-color: #FF4F4F;
+}
+
+.reset-button.passive {
+  background-color: #e9e9e9;
+}
