--- a/frontend/components/picker.css
+++ b/frontend/components/picker.css
@@ -69,9 +69,29 @@ button {
   text-transform: uppercase;
 }
 
-.pick-category button:hover {
+/* .pick-category button:hover {
   background-color: black;
   color: #CCCCCC;
+} */
+
+.reset-pick-category-sound.active {
+  background-color: black;
+  color: #CCCCCC;
+}
+
+.reset-pick-category-sound.passive {
+  background-color: unset;
+  color: black;
+}
+
+.reset-pick-category-features.active {
+  background-color: black;
+  color: #CCCCCC;
+}
+
+.reset-pick-category-features.passive {
+  background-color: unset;
+  color: black;
 }
 
 .taste-picker .filter-section .label {
