--- a/frontend/components/picker.css
+++ b/frontend/components/picker.css
@@ -69,10 +69,15 @@ button {
   text-transform: uppercase;
 }
 
-/* .pick-category button:hover {
+.sorting-button.active {
   background-color: black;
   color: #CCCCCC;
-} */
+}
+
+.sorting-button.passive {
+  background-color: unset;
+  color: black;
+}
 
 .reset-pick-category-sound.active {
   background-color: black;
