--- a/frontend/components/headphone.css
+++ b/frontend/components/headphone.css
@@ -13,6 +13,53 @@ main {
   display: flex;
 }
 
+.product.loading .photo {
+  height: 180px;
+  width: 180px;
+  margin: 10px;
+  border-radius: 8px;
+  border: 0;
+}
+
+.product.loading .title {
+  height: 30px;
+  width: 400px;
+  margin: 0 auto;
+  border-radius: 8px;
+  animation-delay: .2s;
+}
+
+.product.loading .metric-body {
+  justify-content: space-evenly;
+}
+
+.product.loading .metric-body > div {
+  width: 80px;
+  height: 80px;
+  border-radius: 8px;
+}
+
+@keyframes shimmering {
+	0% { background-position-x: -400px; }
+  100% { background-position-x: 800px; }
+}
+
+.shimmer {
+  background: #f6f7f8;
+  background-image: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+  background-repeat: no-repeat;
+	background-position: 0 0;
+  background-size: 800px 500px; 
+  display: inline-block;
+  position: relative; 
+
+	animation-duration: 1s;
+	animation-fill-mode: forwards;
+	animation-iteration-count: infinite;
+	animation-name: shimmering;
+	animation-timing-function: linear;
+}
+
 .detail {
   width: 760px;
   display: flex;
