--- a/frontend/components/headphone.css
+++ b/frontend/components/headphone.css
@@ -232,6 +232,12 @@ main {
 }
 
 @media only screen and (max-width: 960px){
+  .metric {
+    padding-bottom: 30px;
+  }
+}
+
+@media only screen and (max-width: 960px){
   .metric-body {
     width: 200px;
     padding: 0;
@@ -250,11 +256,13 @@ main {
 }
 
 @media only screen and (max-width: 960px){
-  .detail {
+  .product .detail {
     width: 200px;
     height: 900px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -273,3 +281,10 @@ main {
   }
 }
  
+@media only screen and (max-width: 960px) {
+  .detail {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
