--- a/frontend/pages/app.css
+++ b/frontend/pages/app.css
@@ -96,7 +96,7 @@
 
 @media only screen and (max-width: 960px){
   .results {
-    /* width: 100%; */
+    width: 100%;
     height: 900px;
     margin: 0;
     display: flex;
