--- a/frontend/components/picker.css
+++ b/frontend/components/picker.css
@@ -213,6 +213,14 @@ button {
   transition: background .15s ease-in;
 }
 
+.space {
+  border-radius: 10px;
+  padding: 10px 15px;
+  position: relative;
+  margin: 15px;
+  text-align: center;
+}
+
 .icon:hover {
   color: white;
 }
