--- a/frontend/components/header.css
+++ b/frontend/components/header.css
@@ -25,6 +25,24 @@ a {
   letter-spacing: 0.1em;
   color: #999;
   font-weight: 300;
+  transition: color 0.20s ease-in;
+}
+
+a:hover {
+  color: rgb(39, 39, 39);
+}
+
+.comming-s-tool-t {
+  color: rgb(235, 235, 235);
+  text-decoration: none;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-weight: 300;
+}
+
+.comming-s {
+  color: rgb(218, 218, 218);
 }
 
 @media only screen and (max-width: 960px){
