--- a/frontend/pages/app.css
+++ b/frontend/pages/app.css
@@ -18,6 +18,28 @@
   margin-bottom: 100px;
 }
 
+.p-100 {
+  padding: 100px;
+}
+
+.pb-100 {
+  padding-bottom: 100px;
+}
+
+.pt-100 {
+  padding-top: 100px;
+}
+
+.ph-80 {
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.pv-80 {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+
 .categories {
   width: 500px;
   height: 40px;
